--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
   "devDependencies": {
     "@graphql-codegen/cli": "1.21.4",
     "@graphql-codegen/typescript": "1.22.0"
+  },
+  "dependencies": {
+    "apollo-server-express": "^2.24.0",
+    "express": "^4.17.1"
   }
 }
