--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon.js",
+    "start": "ts-node server.ts",
     "gen-types": "graphql-codegen --config codegen.yml"
   },
   "repository": {
